<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Menu "My Location" -->
    <item android:id="@+id/menu_map_location"
        android:title="@string/menu_map_location"
        android:icon="@drawable/ic_baseline_my_location_24"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />

    <item android:id="@+id/menu_map_point_new"
        android:title="@string/menu_map_point_new"
        android:icon="@drawable/ic_baseline_location_on_24"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />

    <!-- Menu "Map Type" -->
    <item android:id="@+id/menu_map_mode"
        android:title="@string/menu_map_mode"
        android:icon="@android:drawable/ic_menu_mapmode"
        app:showAsAction="never"
        tools:ignore="AppCompatResource">
        <menu>
            <item android:id="@+id/menu_map_mode_satellite"
                android:showAsAction="never"
                android:title="@string/menu_map_mode_satellite"
                tools:ignore="AppCompatResource" />

            <item android:id="@+id/menu_map_mode_terrain"
                android:showAsAction="never"
                android:title="@string/menu_map_mode_terrain"
                tools:ignore="AppCompatResource" />
        </menu>
    </item>

</menu>